--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,32 +1,32 @@
-<div class="navbar bg-base-100 pb-24 border-b border-primary">
-  <div class="flex-1">
-    <%= link_to 'Mutro', root_path, class: "btn btn-ghost normal-case text-2xl text-white font-black bg-gradient-to-r from-primary to-accent" %>
-  </div>
-  <div class="flex-none gap-2">
+<div class="navbar bg-base-100 border-b border-primary h-32">
+  <div class="flex justify-between items-center w-full">
+    <div>
+      <%= link_to 'Mutro', root_path, class: "btn btn-ghost normal-case text-2xl text-white font-black bg-gradient-to-r from-primary to-accent" %>
+    </div>
+
     <% if user_signed_in? %>
-      <%= link_to 'my playlists', my_playlists_path, class: "btn btn-sm btn-outline btn-primary" %>
-      <%= link_to new_playlist_path, class: "btn btn-sm border-amber-500 text-amber-500 bg-white hover:bg-amber-600 hover:text-white" do %>
-        Release
-      <% end %>
-      <div class="dropdown dropdown-end">
-        <label tabindex="0" class="btn btn-ghost btn-circle avatar">
-          <div class="w-10 h-10 rounded-full bg-primary">
-          </div>
-        </label>
-         <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 border-primary rounded-box w-52">
-          <li class="text-base font-bold text-primary">Playlists</li>
-          <li class="text-primary"><%= link_to 'My Playlists', my_playlists_path %></li>
-          <li class="text-primary"><%= link_to 'My GoodVibes', good_vibes_user_path(current_user) %></li>
-          <li class="text-base font-bold text-primary">Settings</li>
-          <li><%= link_to 'My Page', user_path(current_user), class: "text-primary" %></li>
-          <li><%= link_to 'Log Out', destroy_user_session_path, data: { turbo_method: :delete }, class: "font-bold text-error" %></li>
-        </ul>
+      <div class="flex items-center gap-2">
+        <%= link_to 'Release', new_playlist_path, class: "btn btn-sm border-amber-500 text-amber-500 bg-white hover:bg-amber-600 hover:text-white" %>
+        <%= link_to 'my playlists', my_playlists_path, class: "btn btn-sm btn-outline btn-primary" %>
+
+        <div class="dropdown dropdown-end">
+          <label tabindex="0" class="btn btn-ghost btn-circle avatar">
+            <div class="w-10 h-10 rounded-full bg-primary"></div>
+          </label>
+          <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 border-primary rounded-box w-52">
+            <li class="text-base font-bold text-primary">Playlists</li>
+            <li class="text-primary"><%= link_to 'My Playlists', my_playlists_path %></li>
+            <li class="text-primary"><%= link_to 'My GoodVibes', good_vibes_user_path(current_user) %></li>
+            <li class="text-base font-bold text-primary">Settings</li>
+            <li><%= link_to 'My Page', user_path(current_user), class: "text-primary" %></li>
+            <li><%= link_to 'Log Out', destroy_user_session_path, data: { turbo_method: :delete }, class: "font-bold text-error" %></li>
+          </ul>
+        </div>
       </div>
     <% else %>
       <%= link_to new_user_session_path, class: "btn btn-ghost btn-circle avatar" do %>
         <div class="avatar">
-          <div class="w-10 h-10 rounded-full bg-error">
-          </div>
+          <div class="w-10 h-10 rounded-full bg-error"></div>
         </div>
       <% end %>
     <% end %>
