--- a/app/views/users/good_vibes.html.erb
+++ b/app/views/users/good_vibes.html.erb
@@ -1,11 +1,13 @@
-<div class="container mx-auto px-4 py-8">
-  <h1 class="text-2xl font-bold text-center text-primary border-b border-primary mb-4">My Good Vibes</h1>
+<div class="container mx-auto px-4">
+  <h1 class="text-xl font-bold text-primary border-b border-primary text-center my-8">My Good Vibes</h1>
+  
   <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-16">
     <% @good_vibed_playlists.each do |playlist| %>
       <%= render 'playlists/playlist', playlist: playlist %>
     <% end %>
   </div>
+</div>
 
-  <div class="flex justify-center">
-    <%= paginate @good_vibed_playlists %>
-  </div>
+<div class="flex justify-center">
+  <%= paginate @good_vibed_playlists %>
+</div>
