--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -14,7 +14,7 @@
 </div>
 
 <div class="flex justify-center items-start gap-8 ml-8">
-  <div class="w-full lg:w-1/3 xl:w-2/3 mx-8 bg-white text-primary rounded-lg shadow p-4">
+  <div class="w-full lg:w-1/3 xl:w-2/3 mx-8 bg-white text-primary rounded-lg shadow p-4 max-h-[58vh] overflow-y-auto">
     <%= render 'playlists/playlist_preview', playlist: @playlist %>
   </div>
 
