--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -1,9 +1,3 @@
-<% if flash[:alert] %>
-  <div class="alert alert-danger">
-    <%= flash[:alert] %>
-  </div>
-<% end %>
-
 <div class="pb-8">
   <%= turbo_frame_tag "search_form" do %>
     <%= render 'tracks/search_form' %>
@@ -12,6 +6,10 @@
     <%= render 'tracks/search_results', tracks: @tracks %>
   <% end %>
 </div>
+
+<%= turbo_frame_tag 'flash_messages' do %>
+  <%= render 'shared/flash' %>
+<% end %>
 
 <div class="flex justify-center items-start gap-8 ml-8">
   <div class="w-full lg:w-1/3 xl:w-2/3 mx-8 bg-white text-primary rounded-lg shadow p-4 max-h-[58vh] overflow-y-auto">
